@@ -170,8 +170,8 @@ require 'monitor'
 
 class Logger
   VERSION = "1.2.6"
-  /: (\S+),v (\S+)/ =~ %q$Id$
-  ProgName = "#{$1}/#{$2}"
+  id, name, rev = %w$Id$
+  ProgName = "#{name.chomp(",v")}/#{rev}"
 
   class Error < RuntimeError; end
   class ShiftingError < Error; end
